--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "private": null,
   "dependencies": {
     "node-sass": "^5.0.0"
+  },
+  "scripts":{
+    "scss": "node-sass --watch scss -o css"
   }
 }
