add new style to about

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/mohammadjavadnouri/testProject2.git",
   "author": "Mohammadjavad Nouri <mjnouri.ir>",
   "license": "MIT",
-  "private": null,
+  "private": false,
   "dependencies": {
     "node-sass": "^5.0.0"
   },
